Исправил ряд ошибок, сделал конструктор нейросети, оптимизировал некоторые параметры